--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="#page-top">
-                <img src="./favicon/android-chrome-512x512.png" alt="..." height="54">
+                <img src="./favicon/android-chrome-512x512.png" alt="..." height="32">
                 U3Admin</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -112,10 +112,11 @@
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#page-top">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#product">Product</a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Images</a></li>
                     <li class="nav-item"><a class="nav-link" href="#users">Clients</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/u3a-software.html">Our Software</a></li>
+                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="nav-item" hidden><a class="nav-link"
                             href="https://u3admin.org.au/u3a-administration-software.html">Contact1</a></li>
                     <li class="nav-item" hidden><a class="nav-link"
@@ -128,6 +129,9 @@
             </div>
         </div>
     </nav>
+
+    <header class="page-section-xs bg-primary">
+    </header>
 
     <!-- Masthead-->
     <header class="masthead" id="masthead">
@@ -177,7 +181,7 @@
     <!-- Product-->
     <section class="page-section" id="product">
         <div class="container px-4 px-lg-5">
-            <h2 class="text-center mt-0">Our software</h2>
+            <h2 class="text-center mt-0">Our difference</h2>
             <hr class="divider" />
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -276,7 +280,8 @@
         <section class="page-section-sm bg-secondary text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">Sample Images</h2>
-                <p class="text-white-75 mb-0">Click an image to view.</p>
+                <p class="text-white-75 mb-0">Click an image to view.<br/>
+                    <span class="d-none d-md-inline"><strong>Hint:</strong> Image too small? Feel free to right-click an image and open in another tab.</span></p>
             </div>
         </section>
 
