place contact on all menus

--- a/u3a-software.html
+++ b/u3a-software.html
@@ -70,6 +70,7 @@
                     <li class="nav-item"><span id="menu-link-2"></span></li>
                     <li class="nav-item"><span id="menu-link-1"></span></li>
                     <li class="nav-item"><a class="nav-link" href="/"><span class="bi-house">&nbsp; Home</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
