a few more typos

--- a/faq.html
+++ b/faq.html
@@ -353,19 +353,15 @@
 
                                     <p>
                                         Our software is web-based and therefore any device (phone, tablet or PC) capable
-                                        of running a web browser will execute with the following caveats ...
+                                        of running a web browser will execute the application with the following caveats ...
                                     <uL>
                                         <li>
                                             <p>
                                                 Apple iOS devices (iPhone and iPad) version 12.5 or below are not
                                                 suitable.
-                                                These are devices that are now 5 or more years of age. We are using
-                                                modern
-                                                web
-                                                technologies available on all other browsers but Apple has not updated
-                                                the
-                                                Safari browser
-                                                on these devices.
+                                                These are devices that are now more than 5 years of age. We are using
+                                                modern web technologies available on all other browsers but Apple has not updated
+                                                the Safari browser on these devices.
                                             </p>
                                         </li>
                                         <li>
