--- a/index.html
+++ b/index.html
@@ -39,15 +39,6 @@
     <link rel="preconnect" href="https://www.gstatic.com" crossorigin>
     <script src="https://www.google.com/recaptcha/api.js?render=6LfkytknAAAAAAYsNdr5hNmCJYHZuU37gQSzLDty"></script>
 
-    <!-- MS Clarity tracking -->
-    <script type="text/javascript">
-        (function (c, l, a, r, i, t, y) {
-            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-        })(window, document, "clarity", "script", "im2qsix2fp");
-    </script>
-
 </head>
 
 <body id="page-top" tabindex="-1">
@@ -116,22 +107,6 @@
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Images</a></li>
                     <li class="nav-item"><a class="nav-link" href="#users">Clients</a></li>
                     <li class="nav-item"><a class="nav-link" href="/u3a-software.html">Our Software</a></li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Our Software
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="u3a-software.html">Introduction</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="u3a-administration-software.html">Administration
-                                    Website</a></li>
-                            <li><a class="dropdown-item" href="u3a-member-portal.html">Member Portal</a></li>
-                        </ul>
-                    </li>
                     <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
@@ -460,6 +435,8 @@
     <!-- SimpleLightbox plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
     <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+    <!-- u3admin specific -->
     <script src="js/scripts.js"></script>
     <!-- Google reCaptcha -->
     <script src="https://www.google.com/recaptcha/api.js"></script>
