navbar dropdown css fix

--- a/index.html
+++ b/index.html
@@ -107,8 +107,20 @@
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Images</a></li>
                     <li class="nav-item"><a class="nav-link" href="#users">Clients</a></li>
                     <li class="nav-item"><a class="nav-link" href="/u3a-software.html">Our Software</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Our Software
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="u3a-software.html">Introduction</a></li>
+                          <li><a class="dropdown-item" href="u3a-administration-software.html">U3A Administration Website</a></li>
+                          <li><a class="dropdown-item" href="u3a-member-portal.html">U3A Member Portal</a></li>
+                        </ul>
+                      </li>
+
+                      <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>                                      
                 </ul>
             </div>
         </div>
