--- a/faq.html
+++ b/faq.html
@@ -133,7 +133,7 @@
                                             <a href='https://www.browserstack.com/'><input
                                                     class="btn w-100 text-start bg-light text-primary"
                                                     title="Browserstack - click for more details"
-                                                    value="Help + Manual" /></a>
+                                                    value="Browserstack" /></a>
                                             <p>Getting software to look great on any device large or small is hard
                                                 work. Browserstack assists in providing virtual environments in which to
                                                 do our testing.
@@ -357,6 +357,7 @@
                                                 modern secure web technologies available on all other browsers.
                                                 Unfortunately, Apple
                                                 does not update it's Safari browser on these older devices.
+                                                Apple iOS devices version greater than 12.5 have no problems.
                                             </p>
                                         </li>
                                         <li>
@@ -377,7 +378,7 @@
                                                 process membership
                                                 renewals. To do so they will need to execute the software in a special
                                                 environment optimised
-                                                for security. To do so, will require a device running the Microsoft
+                                                for security. This in turn will require a device running the Microsoft
                                                 Windows
                                                 operating system.
                                             </p>
@@ -416,7 +417,7 @@
                                         Thirdly, your data is housed in a Microsoft Azure datacenter located in
                                         Australia. Click
                                         <a href="https://azure.microsoft.com/en-au/explore/security/">here</a> for
-                                        further details.
+                                        details on Microsoft security.
                                     </p>
                                     <p>
                                         Finally, our software provides role-based access to your data. A person must
