--- a/u3a-software.html
+++ b/u3a-software.html
@@ -131,7 +131,7 @@
 
                     <a href='u3a-member-portal.html'><input class="btn btn-link-primary w-100 text-start bg-light"
                             title="U3A Member Portal - click for more details" value="U3A Member Portal" /></a>
-                    <div class="row col-md-9 mx-auto">
+                    <div class="row col-md-12 mx-auto">
                         <div class="col-md-6">
                             <div class="text-center text-primary">All members</div>
                             <div class="border border-5 rounded mx-auto"><img class="img-fluid"
@@ -248,7 +248,7 @@
                             Member Portal</em>
                         is intended to do. By allowing members secure &amp; controlled access to their information and
                         only their information
-                        you spread the work formerly undertaken by overworked volunteers. Each member is enabled to
+                        you spread the work formerly undertaken by one or two volunteers. Each member is empowered to
                         alter their contact details,
                         pay their membership fees online, enrol and manage their class enrollments, and advise when
                         leave is taken. A member may
