corrected site.js issue

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <!-- u3admin specific -->
-    <script src="js/scripts.js"></script>
+    <script src="js/site.js"></script>
     <!-- Google reCaptcha -->
     <script src="https://www.google.com/recaptcha/api.js"></script>
 </body>
