--- a/u3a-software.html
+++ b/u3a-software.html
@@ -96,7 +96,7 @@
         a.classList.add("nav-link");
         e.appendChild(a);
         // 
-        document.getElementById("title").innerHTML = 'U3A Membership &amp; Course Enrolment Software';
+        document.getElementById("title").innerHTML = 'An introduction to our software';
     </script>
 
     <!-- question 1-->
@@ -111,7 +111,7 @@
                             value="U3A Administration Website" /></a>
                     <p>
                     <div class="border border-5 rounded mx-auto"><img class="img-fluid"
-                            src="../assets/img/admin-website-intor.png" alt="Admin website example"></div>
+                            src="../assets/img/admin-website-intro.png" alt="Admin website example"></div>
                     </p>
                     <p>
                         The <em>Administration Website</em> provides access to authorised users only.
