--- a/faq.html
+++ b/faq.html
@@ -176,6 +176,13 @@
                                                 Email Service Provider.
                                                 In doing so you will find that 99% of your email is reliably delivered.
                                             </p>
+                                            <p>Need further proof? Take a look at the results from a 30 day period
+                                                for one of our U3A groups...
+                                            </p>
+                                            <div class="border border-5 rounded mx-auto"><img class="img-fluid"
+                                                    src="../assets/img/reliable-email.png" alt="Admin website example">
+                                            </div>
+                                            </p>
                                         </li>
                                     </ul>
                                 </div>
@@ -353,11 +360,14 @@
                                             <p>
                                                 Apple iOS devices (iPhone and iPad) version 12.5 or below are not
                                                 suitable.
-                                                These are devices that are now more than 5 years of age. We are using
-                                                modern secure web technologies available on all other browsers.
-                                                Unfortunately, Apple
+                                                These are devices that are now more than 5 years of age and
+                                                unfortunately, Apple
                                                 does not update it's Safari browser on these older devices.
                                                 Apple iOS devices version greater than 12.5 have no problems.
+                                            </p>
+                                            <p>We are using
+                                                modern secure web technologies available on all other internet browsers.
+                                                Just make sure your internet browser is up to date.
                                             </p>
                                         </li>
                                         <li>
@@ -378,9 +388,10 @@
                                                 process membership
                                                 renewals. To do so they will need to execute the software in a special
                                                 environment optimised
-                                                for security. This in turn will require a device running the Microsoft
+                                                for security. If you choose to use this facility, a device running the
+                                                Microsoft
                                                 Windows
-                                                operating system.
+                                                operating system version 10 or higher will be required.
                                             </p>
                                         </li>
                                     </uL>
@@ -402,11 +413,20 @@
                                 data-bs-parent="#accordion">
                                 <div class="card-body">
                                     <p>A great question!</p>
-                                    <p>
-                                        First, we only collect and keep members data considered necessary to manage and
-                                        administer your U3A.
-                                        We proactively delete that data when it is no longer considered necessary.
-                                    </p>
+                                    <div class="row">
+                                        <figure class="col-1">
+                                            <div>
+                                                <img src="../assets/img/potofgold.svg" style="height:50px">
+                                            </div>
+                                        </figure>
+                                        <p class="col-11">
+                                            Consider your data a pot of gold. By keeping that pot small, we
+                                            minimise it's value to bad actors.
+                                            Therefore, we only collect members data considered absolutely necessary to manage
+                                            and administer your U3A And, when it is no longer considered necessary
+                                            we proactively delete it.                                             
+                                        </div>
+                                    </div>
                                     <p>Secondly, your data is encrypted at rest and in transit. That means it is
                                         encrypted when it is stored
                                         in the database and when it is transferred over the Internet. The only time it
