--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#page-top">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#difference">Our Difference</a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Images</a></li>
                     <li class="nav-item"><a class="nav-link" href="#users">Clients</a></li>
 
@@ -164,8 +165,8 @@
                         your U3A including new membership, membership renewal, online fee payment, course enrolment,
                         class attendance,
                         reliable member email and much more.</p>
-                    <p class="text-white-75 mb-4">No, not one cup per member.</p>
-                    <p class="text-white-75 mb-4">That's one cup of coffee, total. No strings attached!</p>
+                    <p class="text-white-75 mb-4">No, not one cup per member.<br/>
+                        That's one cup of coffee, total. No strings attached!</p>
                     <p class="text-white-75 mb-4">Interested? Let's explore further.</p>
                     <a class="mt-4 btn btn-light btn-xl" href="#product">Get Started!</a>
                 </div>
@@ -173,8 +174,8 @@
         </div>
     </section>
 
-    <!-- Product-->
-    <section class="page-section" id="product">
+    <!-- Difference -->
+    <section class="page-section" id="difference">
         <div class="container px-4 px-lg-5">
             <h2 class="text-center mt-0">Our difference</h2>
             <hr class="divider" />
@@ -221,7 +222,7 @@
                         <p class="text-muted mb-0">It is free to download and customise at any time.</p>
                         <p class="text-muted mb-0">We don't sell software. It is free for all.</p>
                         <p class="mt-4"><a class="nav-link bi-github text-muted"
-                                href="https://github.com/HmichaelG/U3A">&nbsp; Our Github repository</a></p>
+                                href="https://github.com/HmichaelG/U3A">&nbsp; Click to view our Github repository</a></p>
                     </div>
                 </div>
             </div>
@@ -352,7 +353,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="user-title mt-0">Our valued clients</h2>
+                    <h2 class="text-white mt-0">Our valued clients</h2>
                     <p class="text-white-75 mt-4">A small but growing, happy user base.<br />Click a U3A to view.</p>
                     <hr class="divider divider-light" />
                     <p class="mt-4"><a class="btn btn-lg btn-primary" href="https://eastlakes.u3anet.org.au/">Eastlakes
