--- a/faq.html
+++ b/faq.html
@@ -423,7 +423,7 @@
                                             Consider your data a pot of gold. By keeping that pot small, we
                                             minimise it's value to bad actors.
                                             Therefore, we only collect members data considered absolutely necessary to manage
-                                            and administer your U3A And, when it is no longer considered necessary
+                                            and administer your U3A and, when it is no longer considered necessary
                                             we proactively delete it.                                             
                                         </div>
                                     </div>
