--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <p class="text-white-75 mb-4">No, not one cup per member.<br/>
                         That's one cup of coffee, total. No strings attached!</p>
                     <p class="text-white-75 mb-4">Interested? Let's explore further.</p>
-                    <a class="mt-4 btn btn-light btn-xl" href="#product">Get Started!</a>
+                    <a class="mt-4 btn btn-light btn-xl" href="#difference">Get Started!</a>
                 </div>
             </div>
         </div>
