--- a/u3a-software.html
+++ b/u3a-software.html
@@ -109,13 +109,13 @@
                 <p class="pt-4">
                     Finding the right software for your U3A is no easy task.
                     It must be feature-rich, yet not too complex,
-                    sufficient for our needs yet able to grow with you,
+                    sufficient for your needs yet able to grow into the future,
                     affordable but not cheap,
                     and supportive when you need help. Importantly, it must be designed for 
                     a U3A, not something cobbled together from another industry.
                 </p>
                 <p>
-                    We think that by finding our website your search may be over! So, here's what we have to offer...
+                    We think that by finding our website your search may be over! Here's what we have to offer...
                 </p>
                 <div class="h5 bg-light"> <span class="bi-database">&nbsp; A single source of truth</span></div>
                 <p>
@@ -152,7 +152,7 @@
                 <p>We retain payment, enrolment and attendance details for current members.</p>
                 <p>We keep a record of volunteer activities including leader and
                     course clerk clerk lists, life members and other complimentary membership.</p>
-                <p>Importantly, this is what we do not record...</p>
+                <p>Importantly, this is what <strong>we do not</strong> record...</p>
                 <uL>
                     <li>Bank account details</li>
                     <li>Credit card numbers</li>
