--- a/u3a-software.html
+++ b/u3a-software.html
@@ -173,6 +173,19 @@
                 </div>
                 <p>That's impressive!</p>
 
+                <div class="h5 bg-light"> <span class="bi-bank">&nbsp; Online member payments</span></div>
+                <p>We use the <a href="https://eway.com.au/">Eway online payments system</a> to process new member payments and member renewals.</p>
+                <p>Eway offers a secure and reliable online payment gateway that accepts all major 
+                    forms of credit card. Importantly, Eway is an Australian company governed by Australian law
+                    and boasts local Australian support.</p>
+                <p>We can also process payments made by members directly from their bank account. However, the online
+                    payments system is preferred as the transaction is completed in real time, it is far more accurate 
+                    and the money is transferred to your U3A's account usually by the next day.
+                </p>
+                <p>
+                    That means no more manual reconciliations and no more orphaned payments.
+                </p>
+
                 <div class="h5 bg-light"> <span class="bi-mortarboard">&nbsp; Complete course &amp; class scheduling
                     </span></div>
                 <p>
