--- a/faq.html
+++ b/faq.html
@@ -185,6 +185,11 @@
                                             </p>
                                         </li>
                                     </ul>
+                                    <h6>Online payment merchant fees</h6>
+                                    <p>In addition, we optionally process new member payments and member renewals via the
+                                        <a href="https://eway.com.au/">Eway online payments system</a> . The merchant 
+                                        fee structure is available on their website but budget $1.00 for a $50.00 membership payment.
+                                    </p>
                                 </div>
                             </div>
                         </div>
