--- a/u3a-administration-software.html
+++ b/u3a-administration-software.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- refer https://developers.google.com/search/docs/crawling-indexing/consolidate-duplicate-urls#rel-canonical-link-method -->
-    <link rel="canonical" href="https://u3admin.org.au/u3a-administration-software.html" />
+    <link rel="canonical" href="https://u3admin.org.au/index.html" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
